[tool.poetry]
name = "trackleaders-api"
version = "0.1.0"
description = "API for interacting with Trackleaders"
authors = ["davidrichey84 <davidrichey84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.2"
pydantic = "^1.9.1"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pylint = "^2.14.5"
pydocstyle = "^6.1.1"
yamllint = "^1.27.1"
bandit = "^1.7.4"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
